[package]
name = "gui-experiment"
version = "0.1.0"
edition = "2024"
license = "MIT and GPL-3"
repository = "https://github.com/sukhmel/rust-gui-experiments.git"
description = "Experimenting with different Rust GUI frameworks"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
crossterm = { version = "0.29", optional = true }
eframe = { version = "0.33", optional = true }
floem = { version = "0.2", optional = true }
gpui = { version = "0.2", optional = true }
iced = { version = "0.13", optional = true, features = ["image"] }
image = { version = "0.25.8", optional = true }
itertools = "0.14.0"
kas = { version = "0.16", optional = true }
leptos = { version = "0.8", optional = true, features = ["csr"] }
ratatui = { version = "0.29", optional = true }
rui = { version = "0.6", optional = true }
slint = { version = "1.10", optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xilem = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.63", optional = true }
web-sys = { version = "0.3.81", features = ['Document', 'Element', 'EventTarget', 'Event', 'HtmlElement', 'HtmlButtonElement', 'Node', 'Window'], optional = true}

[build-dependencies]
glob = { version = "0.3", optional = true }
slint-build = { version = "1.10", optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }

[features]
egui = ["eframe", "image"]
floem = ["dep:floem", "image"]
gpui = ["dep:gpui", "glob"]
iced = ["dep:iced"]
kas = ["dep:kas"]
leptos = ["dep:leptos"]
ratatui = ["dep:ratatui", "dep:crossterm"]
rui = ["dep:rui"]
slint = ["dep:slint", "slint-build"]
wasm = ["wasm-bindgen", "web-sys", "wasm-bindgen-test", "console_error_panic_hook"]
xilem = ["dep:xilem"]

[patch.crates-io]
# Patch rui to use a compatible web-sys version, instead of one that conflicts with dependency of eframe
rui = { git = "https://github.com/audulus/rui", branch = "main" }